<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="medialibrary_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="user_guide_text">Пользовательское соглашение</string>
    <string name="practicum_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email">zedaro.re@gmail.com</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
</resources>