<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SecondaryActivityStyle">

    <LinearLayout
        style="@style/ReturnButtonAndTextLayoutStyle">
        <ImageView
            style="@style/ReturnButtonStyle"
            android:id="@+id/return_button"
            android:src="@drawable/return_icon"/>
        <TextView
            style="@style/ReturnTextStyle"
            android:text="@string/settings_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimention_24dp">
        <FrameLayout
            style="@style/SettingsParametersStyle">
            <TextView
                style="@style/SettingsParameterTextStyle"
                android:text="@string/dark_theme" />
            <Switch
                style="@style/SwitchDayNightStyle"
                android:theme="@style/Theme.PlaylistMaker.SwitchOverlay"
                android:src="@drawable/swiitch_off"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/share_app"
            style="@style/SettingsParametersStyle">
            <TextView
                style="@style/SettingsParameterTextStyle"
                android:text="@string/share_text" />
            <ImageView
                style="@style/SettingsParameterIconStyle"
                android:src="@drawable/share_icon"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/send_to_support"
            style="@style/SettingsParametersStyle">
            <TextView
                style="@style/SettingsParameterTextStyle"
                android:text="@string/support_text"/>
            <ImageView
                style="@style/SettingsParameterIconStyle"
                android:src="@drawable/support_icon"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/user_agreement"
            style="@style/SettingsParametersStyle">
            <TextView
                style="@style/SettingsParameterTextStyle"
                android:text="@string/user_guide_text"/>
            <ImageView
                style="@style/SettingsParameterIconStyle"
                android:src="@drawable/user_guide_icon"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>