<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    android:paddingTop="14dp"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_22"
            android:text="@string/search_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/main_button_between_icon_text_size"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_22"
            android:text="@string/medialibrary_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:icon="@drawable/medialibrary_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/main_button_between_icon_text_size"
            android:foreground="?attr/selectableItemBackground"/>
        <Button
            android:id="@+id/button_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_22"
            android:text="@string/settings_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/main_button_between_icon_text_size"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>